Revert "Fix pre tag overflow"
This reverts commit 5abbadfa622e58a4951cf0b2f96fbf8094641be8.

--- a/static/style.css
+++ b/static/style.css
@@ -27,10 +27,6 @@
 	margin: 0px;
 }
 
-.status-content pre {
-	overflow-x: auto;
-}
-
 .status-content img,
 .status-image,
 .status-video {
@@ -56,8 +52,6 @@
 }
 
 .status {
-	overflow-x: auto;
-	width: 100%;
 }
 
 .status-dname {
